@@ -1,3 +1,7 @@
+2011-05-26  Simon Josefsson  <simon@josefsson.org>
+
+	* lib/gen-uni-tables.c: Say "gen-uni-tables.c" consistently.
+
 2011-05-26  Bruno Haible  <bruno@clisp.org>
 
 	mbsrchr: Avoid collision with system function on Interix.
